--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -55,9 +55,9 @@ jobs:
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add data/
+          # Stage data/ and any incidental changes (like uv.lock sync)
+          git add .
           git commit -m "Update Scheinfirmen data (Stand: ${{ steps.stand.outputs.value }})"
-          git pull --rebase
           git push
 
       - name: No changes detected
