--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -55,8 +55,7 @@ jobs:
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
-          # Stage data/ and any incidental changes (like uv.lock sync)
-          git add .
+          git add data/
           git commit -m "Update Scheinfirmen data (Stand: ${{ steps.stand.outputs.value }})"
           git push
 
